--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -25,7 +25,7 @@ jobs:
           path: rosettasciio
           ref: numba_h5py_optional
 
-      - name: Checkout rosettasciio
+      - name: Checkout RosettaSciIO
         # Needs to fetch the tags from upstream to get the
         # correct version with setuptools_scm
         run: |
@@ -33,7 +33,7 @@ jobs:
           git remote add upstream https://github.com/hyperspy/rosettasciio.git
           git fetch --prune --unshallow
           git fetch upstream --tags
-      - name: Build rosettascio
+      - name: Build RosettaSciIO
         # Remove when a pure python wheels is available on pypi
         run: |
           cd rosettasciio
@@ -41,10 +41,23 @@ jobs:
           pipx run build --wheel --outdir ../content
         env:
           DISABLE_C_EXTENTIONS: 1
+
+      - name: Checkout HyperSpy
+        uses: actions/checkout@v3
+        with:
+          repository: ericpre/hyperspy
+          path: hyperspy
+          ref: pyodide
+      - name: Build HyperSpy
+        # Remove when a pure python wheels is available on pypi
+        run: |
+          cd hyperspy
+          python -m pip install pipx
+          pipx run build --wheel --outdir ../content
+
       - name: Install the dependencies
         run: |
           python -m pip install -r requirements.txt
-          python -m pip install --pre --find-links rosettasciio/dist rosettasciio
       - name: Build the JupyterLite site
         run: |
           cp README.md content
