--- a/requirements.txt
+++ b/requirements.txt
@@ -1,9 +1,10 @@
 # Core modules (mandatory)
-jupyterlite-core==0.1.3
-jupyterlab~=3.5.1
+jupyterlite-core==0.2.3
+jupyterlab~=4.0.11
+notebook~=7.0.7
 
 # Python kernel (optional)
-jupyterlite-pyodide-kernel==0.1.3
+jupyterlite-pyodide-kernel==0.2.3
 
 # Python: ipywidget library for Jupyter notebooks (optional)
 ipywidgets>=8.1.1,<9
